--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -24,6 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- 웹 폰트 서비스 이용 - link -->
+    <!-- <link
+      href="https://hangeul.pstatic.net/hangeul_static/css/NanumDarEuiGweDo.css"
+      rel="stylesheet"
+    /> -->
     <title>React App</title>
   </head>
   <body>
